--- a/techNew/home.html
+++ b/techNew/home.html
@@ -24,6 +24,9 @@
     <div class="wrap-banner center-layout">
       <img src="img/banner.jpg">
     </div>
+      <div class="logo">
+       <img src="img\logo.svg">   
+       </div>
   </section>
 
 <!-- News Section -->
