--- a/techNew/home.html
+++ b/techNew/home.html
@@ -25,7 +25,7 @@
       <img src="img/banner.jpg">
     </div>
       <div class="logo">
-       <img src="img\logo.svg">   
+       <img src="C:\Users\Traning1\Desktop\frontend\techNew\img\logo.svg">   
        </div>
   </section>
 
@@ -39,18 +39,18 @@
     </article><!-- remove space
 
     --><article class="news">
-      <img src="img/01_news.jpg">
+      <img src="img/02_news.jpg">
       <h1>Analytics Information</h1>
     </article><!-- remove space
 
 
     --><article class="news">
-      <img src="img/01_news.jpg">
+      <img src="img/03_news.jpg">
       <h1>Analytics Information</h1>
     </article><!-- remove space
 
     --><article class="news">
-      <img src="img/01_news.jpg">
+      <img src="img/04_news.jpg">
       <h1>Analytics Information</h1>
     </article>
   </section>
