--- a/techNew/news-detaild.html
+++ b/techNew/news-detaild.html
@@ -25,13 +25,20 @@
       <img src="img/banner.jpg">
     </div>
       <div class="logo">
-       <img src="img\logo.svg">   
+       <img src="C:\Users\Traning1\Desktop\frontend\techNew\img\logo.svg">   
        </div>
   </section>
 
-<!-- News Section -->
-<section class="article">
-<div class="section-heading"><h1>NEWS</h1></div>
+<!-- News Article Section -->
+<section class="page">
+<div class="section-heading"><h2>NEWS</h2></div>
+
+<div class="day">
+       <img src="img\day.svg">   
+       </div> 
+<div class="day-title"></h2> ANALYTICS INFORMATION </div>
+
+       
     
 </section>
 
@@ -44,18 +51,18 @@
     </article><!-- remove space
 
     --><article class="news">
-      <img src="img/01_news.jpg">
+      <img src="img/03_news.jpg">
       <h1>Analytics Information</h1>
     </article><!-- remove space
 
 
     --><article class="news">
-      <img src="img/01_news.jpg">
+      <img src="img/02_news.jpg">
       <h1>Analytics Information</h1>
     </article><!-- remove space
 
     --><article class="news">
-      <img src="img/01_news.jpg">
+      <img src="img/04_news.jpg">
       <h1>Analytics Information</h1>
     </article>
   </section>
